--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
   <title>Campus Events Dashboard</title>
   <!-- TODO 0: Link the styles CSS first. -->
   <!-- <link rel="stylesheet" href="styles.css" /> -->
+   <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Campus Events Dashboard</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
 </head>
 <body>
   <header class="site-header">
